--- a/webrtc_chat/chat/templates/chat/main.html
+++ b/webrtc_chat/chat/templates/chat/main.html
@@ -6,9 +6,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Django_WebRTC</title>
 </head>
 <body>
-    
+    <h3 id="label-username">USERNAME</h3>
+    <div>
+        <input id="username"><button id="btn-join">Join Room</button>
+    </div>
+    <div class="main-grid-container">
+        <div id="video-container">
+            <div><video id="local-video" style="float:left;" autoplay playsinline></video></div>
+            <button id="btn-toggle-audio">Audio Mute</button>
+            <button id="btn-toggle-video">Video Off</button>
+        </div>
+        <div id="chat">
+            <h3>Chat</h3>
+            <div id="messages">
+                <ul id="message"></ul>
+            </div>
+
+            <div><input id="msg"><button id="btn-send-msg">Send Message</button></div>
+            <button id="btn-share-screen">Share Screen</button>
+        </div>
+    </div>
 </body>
 </html>
