--- a/webrtc_chat/chat/templates/chat/main.html
+++ b/webrtc_chat/chat/templates/chat/main.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Django_WebRTC</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 </head>
 <body>
     <h3 id="label-username">USERNAME</h3>
@@ -29,5 +30,7 @@
             <button id="btn-share-screen">Share Screen</button>
         </div>
     </div>
+
+    <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
