Fixed appendChild typo - id now correct

--- a/webrtc_chat/chat/templates/chat/main.html
+++ b/webrtc_chat/chat/templates/chat/main.html
@@ -23,7 +23,7 @@
         <div id="chat">
             <h3>Chat</h3>
             <div id="messages">
-                <ul id="message"></ul>
+                <ul id="message-list"></ul>
             </div>
 
             <div><input id="msg"><button id="btn-send-msg">Send Message</button></div>
